# tfy-enablement-program

./: .gitignore  skills-lock.json
deploy-deep-agent/: .dockerignore  .env.example  Dockerfile.fastapi  Dockerfile.streamlit  README.md  app.py  content_agent.py  pyproject.toml  streamlit_app.py  subagents.yaml  truefoundry.yaml
deploy-deep-agent/skills/enterprise-content/: SKILL.md
deploy-mcp-server/simple-calculator-mcp/: main.py  tfy-mainfest.yaml
deploy-training-job/customer-churn/: main.py  requirements.txt
multimodal-support/: pyproject.toml
multimodal-support/audio-models/: speech-to-speech.py  speech-to-text.py  text-to-speech.py
multimodal-support/image-models/: image-edit.py  image-generation.py
