[project]
name = "content-builder-agent"
version = "0.1.0"
description = "A content writer agent configured entirely through files on disk"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-textanalytics>=5.3.0",
    "azure-core>=1.38.1",
    "deepagents>=0.3.5",
    "fastapi>=0.129.0",
    "gliner>=0.2.25",
    "google-genai>=1.0.0",
    "jupyter>=1.1.1",
    "langchain-openai>=1.1.10",
    "pillow>=10.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "streamlit>=1.54.0",
    "tavily-python>=0.5.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = []
