[project]
name = "demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.37.0",
    "google-genai>=1.65.0",
    "numpy>=2.4.2",
    "openai[realtime]>=2.24.0",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.5",
]
